# pymysqlite

./: .gitignore  .pre-commit-config.yaml  README.md  setup.cfg
.github/workflows/: publish.yml
example/: mymodule.py  test_mymodule.py
src/: pymysqlite.py
