[metadata]
name = pymysqlite
version = 0.0.1
description = A library that allows testing of code using pymysql without a running MySQL server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lubomir-brindza/pymysqlite
author = Lubomir Brindza
author_email = lubomir@brindza.sk
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.8
package_dir =
    = src

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True
